# DirectXMath-in-C

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Inc/: DirectXCCollision.h  DirectXCCollision.inl  DirectXCollisionC.h  DirectXCollisionC.inl  DirectXMathC.h  DirectXMathCConvert.inl  DirectXMathCMatrix.inl  DirectXMathCMisc.inl  DirectXMathCVector.inl
Test/: CMakeLists.txt  Runner.c  TestCollision.h  TestCommons.h  TestMatrix.h  test_collision.h
cmake/: XMathC-config.cmake.in
